# S4

./: AUTHORS  COPYRIGHT  ChangeLog  Makefile  Makefile.Darwin  Makefile.Linux  Makefile.Msys2  Makefile.am  Makefile.common  Makefile.custom  Makefile.in  Makefile.macosx  Makefile.mingw32  Makefile.mingw64  Makefile.osx  Makefile.plat  README  TODO  config_mingw32.sh  configure  configure.ac  gensetup.py.sh  pretty_trace.pl  setup.py
RCWA/: DESCRIPTION  NAMESPACE
RCWA/R/: zzz.R
RCWA/man/: RCWA-package.Rd
RCWA/src/: Makevars  RCWA.cpp
S4/: GenEpsilon.cpp  Interpolator.c  Interpolator.h  Patterning.cpp  Patterning.hpp  S4.cpp  S4.h  S4_internal.h  Shape.cpp  Shape.hpp  SpecialFunction.hpp  SpectrumSampler.c  SpectrumSampler.h  config.h  convert.c  convert.h  cubature.h  debug.h  ext_lua.c  ext_lua.h  ext_python.h  gsel.c  main_lua.c  main_python.c  numalloc.c  numalloc.h  rcwa.cpp  rcwa.h  sort.h  test_Patterning.cpp
S4/RNP/: Eigensystems.cpp  Eigensystems.h  Eigensystems_essl.h  Eigensystems_lapack.h  IO.h  LinearSolve_lapack.h  TBLAS.h  TBLAS_acml.h  TLASupport.h
S4/fmm/: fft_iface.h  fmm.h  fmm_FFT.cpp  fmm_PolBasisJones.cpp  fmm_PolBasisNV.cpp  fmm_PolBasisVL.cpp  fmm_closed.cpp  fmm_common.cpp  fmm_experimental.cpp  fmm_kottke.cpp
S4/pattern/: intersection.c  intersection.h  pattern.c  pattern.h
S4r/: Debug.hpp  Eigensystems.cpp  Eigensystems.hpp  IRA.cpp  IRA.hpp  LatticeGridArb.cpp  LatticeGridRect.cpp  Layer.cpp  Layer.hpp  Material.cpp  Material.hpp  POFF2Mesh.cpp  PeriodicMesh.cpp  PeriodicMesh.hpp  Pseudoinverse.cpp  Pseudoinverse.hpp  S4r.cpp  S4r.hpp  Shape.cpp  Shape.hpp  Simulation.cpp  Simulation.hpp  Simulation_working.cpp  StarProduct.hpp  Types.hpp  intersection.c  intersection.h  lua_named_arg.c  lua_named_arg.h  main_lua.c  periodic_off2.c  periodic_off2.h  version.h
doc/: Capi.md  Makefile  Makefile.am  Makefile.in  S4v2lua.md  bugs.html  bugs.md  calc.html  changelog.html  changelog.md  dev_info.html  dev_info.md  faq.html  faq.md  formulations.html  formulations.md  index.html  index.md  license.html  license.md  make.bat  make_html.sh  s4.css  s4_lua_api.html  s4_lua_api.md
doc/source/: changelog.rst  citing.rst  conf.py  dev_info.rst  index.rst  install.rst  lua_api.rst  plot_spec.plt  python_api.rst  spec.eps  tutorial.rst
docold/: Makefile.in  S4.1  bugs.md  changelog.html  changelog.md  formulations.html  formulations.txt  index.html  index.md  license.html  license.md  make_html.sh
examples/: Makefile.am  Makefile.in  README
examples/0d/Antonoyiannakis_PRB_60_1999/: fig3_4.lua  fig6.lua
examples/0d/fabry_perot/: fresnel.lua  slab_resonances.lua  tir.lua  tir_field.lua  transmission_spectrum.lua
examples/1d/: README  binary_grating.lua  binary_grating.txt  diffraction.lua  diffraction.txt
examples/1d/Bi_OE_18_11969_2010/: fig3a.lua
examples/1d/Christ_PRB_70_125113_2004/: fig2b.lua
examples/1d/Liu_OE_17_21897_2009/: fig2a.lua  fig3a.lua  fig3b.lua  fig4e.lua
examples/1d/Oliva_OE_19_14735_2011/: fig1c.lua
examples/1d/Pietarinen_OE_14_2583_2006/: fig2a.lua
examples/2d/Fan_PRB_65_2002/: fig12.R  fig12.lua
examples/2d/Li_JOSA_14_2758_1997/: ex2.lua
examples/2d/Suh_APL_82_1999_2003/: fig2b.lua
examples/C_api/: Makefile  main.c  spec.awk  spec.awk.out
examples/Fan_PRB_65_2002/: fig12.R  fig12.lua
examples/Integrate/: integrate.lua
examples/Li_JOSA_14_2758_1997/: ex1_new.lua  ex1_normal.lua  ex1_orig.lua  ex3.lua
examples/Liu_OE_17_21897_2009/: fig3a.lua  fig3c.lua  fig3d.lua  fig3e.lua  fig3f.lua
examples/MPI_example/: README  mpi_simple.lua
examples/Sakaguchi_OptComm_162_64_1999/: table1m2g2.lua
examples/Suh_APL_82_1999_2003/: fig2a.lua
examples/Tikhodeev_PRB_66_45102_2002/: fig4.lua
examples/convergence/1d/: binary_grating.lua
examples/convergence/Li_JOSA_14_2758_1997/ex1/: cellA.lua  cellB.lua
examples/convergence/Li_JOSA_14_2758_1997/ex2/: fig2.lua
examples/convergence/resonance_pos/: ref.lua
examples/interpolator/: interpolator.lua
examples/magneto/: halfspace.lua  slab.lua
examples/patterns/: circle.lua  composite.lua  ellipse.lua  nonorth.lua  polygon.lua  rectangle.lua
examples/polarization_basis/: square.lua  tri.lua
examples/simple/: simple.lua
examples/spectrum_sampler/: sampler.lua
examples/threading/: parallel.lua
ext/R/: Makefile
ext/R/S4v2/: DESCRIPTION  NAMESPACE
ext/R/S4v2/R/: S4v2.R
ext/R/S4v2/man/: S4_Layer_GetPowerFlux.Rd  S4_Layer_GetWaves.Rd  S4_Layer_SetRegionHalfwidths.Rd  S4_Layer_SetRegionVertices.Rd  S4_Simulation.Rd  S4_Simulation_AddLayer.Rd  S4_Simulation_AddMaterial.Rd  S4_Simulation_ExcitationPlanewave.Rd  S4_Simulation_GetEpsilon.Rd  S4_Simulation_New.Rd  S4_Simulation_SetFrequency.Rd  S4v2-package.Rd
ext/R/S4v2/src/: Makevars  S4v2.c
ext/matlab/: S4Layer.m  S4Material.m  S4Simulation.m  S4mex.c  mex_command.txt  test.m
m4/: ax_blacs.m4  ax_blas.m4  ax_lapack.m4  ax_mpi.m4  ax_scalapack.m4
modules/: Makefile  Makefile.lua  Makefile.osx  Makefile.python  Sample2D.lua  Sample2DBox.lua  function_sampler_1d.c  function_sampler_1d.h  function_sampler_2d.c  function_sampler_2d.h  lua_function_sampler_1d.c  lua_function_sampler_2d.c  py_function_sampler_1d.c  py_function_sampler_2d.c  setup.py  test_sampler1.lua  test_sampler1.py  test_sampler2.lua  test_sampler2.py
src/: Interpolator.h  Makefile.am  Makefile.in  S4.cpp  S4.h  SpectrumSampler.h  config.h.custom  config.h.in  convert.h  cubature.c  gsel.c  gsel.h  main.c  main_lua.c  main_python.c  rcwa.cpp  rcwa.h  sort.c
src/RNP/: Eigensystems.cpp  Eigensystems_lapack.h  LinearSolve.h  LinearSolve_lapack.h  TBLAS.h  TBLAS_ext.h  TLASupport.h  powidf2.c
src/fmm/: fft_iface.cpp  fmm.h  fmm_FFT.cpp  fmm_PolBasisJones.cpp  fmm_PolBasisNV.cpp  fmm_PolBasisVL.cpp  fmm_closed.cpp  fmm_common.cpp  fmm_kottke.cpp
src/pattern/: pattern.c  pattern.h
testing/: numdiff  runtests.sh  testcases.txt
testing/Lapack_thread_test/: Makefile  main.cpp
vc/: Makefile
