ACLOCAL_AMFLAGS=-I ./m4

SUBDIRS = src doc examples

EXTRA_DIST = COPYRIGHT TODO doc m4 testing

dist_html_DATA = \
	doc/bugs.html \
	doc/calc.html \
	doc/changelog.html \
	doc/dev_info.html \
	doc/formulations.html \
	doc/index.html \
	doc/license.html \
	doc/s4.css \
	doc/s4.png \
	doc/s4_lua_api.html
