examplesdir = $(docdir)/examples

# find . -name *.lua
nobase_dist_examples_DATA = README \
	./1d/binary_grating.lua \
	./1d/binary_grating.txt \
	./1d/diffraction.lua \
	./1d/diffraction.txt \
	./1d/README \
	./Antonoyiannakis_PRB_60_1999/fig3_4.lua \
	./Antonoyiannakis_PRB_60_1999/fig6.lua \
	./Christ_PRB_70_125113_2004/fig2b.lua \
	./convergence/1d/binary_grating.lua \
	./convergence/Li_JOSA_14_2758_1997/ex1/cellA.lua \
	./convergence/Li_JOSA_14_2758_1997/ex1/cellB.lua \
	./convergence/Li_JOSA_14_2758_1997/ex2/fig2.lua \
	./convergence/resonance_pos/ref.lua \
	./fabry_perot/fresnel.lua \
	./fabry_perot/slab_resonances.lua \
	./fabry_perot/tir.lua \
	./fabry_perot/tir_field.lua \
	./fabry_perot/transmission_spectrum.lua \
	./Fan_PRB_65_2002/fig12.lua \
	./Integrate/integrate.lua \
	./interpolator/interpolator.lua \
	./Liu_OE_17_21897_2009/fig2a.lua \
	./Liu_OE_17_21897_2009/fig3a.lua \
	./Liu_OE_17_21897_2009/fig3b.lua \
	./Liu_OE_17_21897_2009/fig3c.lua \
	./Liu_OE_17_21897_2009/fig3d.lua \
	./Liu_OE_17_21897_2009/fig3e.lua \
	./Liu_OE_17_21897_2009/fig3f.lua \
	./Liu_OE_17_21897_2009/fig4e.lua \
	./Li_JOSA_14_2758_1997/ex1_new.lua \
	./Li_JOSA_14_2758_1997/ex1_normal.lua \
	./Li_JOSA_14_2758_1997/ex1_orig.lua \
	./Li_JOSA_14_2758_1997/ex2.lua \
	./Li_JOSA_14_2758_1997/ex3.lua \
	./magneto/halfspace.lua \
	./magneto/slab.lua \
	./MPI_example/binary_grating_mpi.lua \
	./MPI_example/README \
	./patterns/circle.lua \
	./patterns/composite.lua \
	./patterns/ellipse.lua \
	./patterns/nonorth.lua \
	./patterns/polygon.lua \
	./patterns/rectangle.lua \
	./polarization_basis/square.lua \
	./polarization_basis/tri.lua \
	./Sakaguchi_OptComm_162_64_1999/table1m2g2.lua \
	./simple/simple.lua \
	./spectrum_sampler/sampler.lua \
	./Suh_APL_82_1999_2003/fig2a.lua \
	./Suh_APL_82_1999_2003/fig2b.lua \
	./threading/parallel.lua \
	./Tikhodeev_PRB_66_45102_2002/fig4.lua
